fix: hide visible scrollbar on page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -253,5 +253,10 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
 
